[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkelf-cocoa"
version = "4.1.0"
description = "Darkelf Cocoa privacy browser for macOS"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Dr. Kevin Moore" }
]

license = { text = "LGPL-3.0-or-later" }

dependencies = [
  "pyobjc",
  "tldextract"
]

# ✅ Add classifiers (important for PyPI)
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

# ✅ Optional but recommended
keywords = ["browser", "privacy", "macos", "cocoa"]

[project.scripts]
darkelf = "darkelf_cocoa.main:run"
